# amuseing

./: Cargo.toml  Dioxus.toml  README.md  build.rs  flake.nix
assets/styling/: main.css
src/: config.rs  errors.rs  lib.rs  main.rs  playback.rs  queue.rs
src/components/: amuseing.rs  mod.rs
src/playback/: mod.rs  playback.rs  player.rs
ui/: main.slint
