[package]
name = "amuseing"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
eframe = { version = "0.31.1", features = ["wgpu"] }
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
ringbuf = "0.4.7"
rubato = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
symphonia = "0.5.4"
symphonia-bundle-mp3 = "0.5.4"
thiserror = "2.0.11"
toml = "0.8.20"
triple_buffer = "8.1.0"
